--- a/src/sass/partials/_booking.scss
+++ b/src/sass/partials/_booking.scss
@@ -173,6 +173,24 @@
         }
   
       }
+
+      &.selected {
+        color: lighten($color-dark, 40%);
+  
+        &::after {
+          position: absolute;
+          content: '';
+          width: 100%;
+          height: 100%;
+          left: 0;
+          top: 0;
+          background: lightgreen;
+          border-color: gray;
+          opacity: 0.4;
+        }
+  
+      }
+
     }
   
     [data-table="1"] {
