--- a/src/sass/partials/_home.scss
+++ b/src/sass/partials/_home.scss
@@ -4,12 +4,20 @@
     background: $color-light;
     border-bottom: 1px solid lighten($color-dark, 70%);
     border-radius: $radius;
+   // padding-left: 74px;
   }
 
   .home-nav {
-    display: flex;
+    display: inline-flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+  }
+  img {
+    width: $base-size * 23;
+    height: $base-size * 10;
+    object-fit: cover;
+    border-radius: 5px;
+    z-index: 0;
+    margin: 3px;
   }
 
   .home-opt {
@@ -42,6 +50,16 @@
     width: 100%;
   }
 
+  .option-title:hover {
+    transition: 0.5s;
+    top: 60px;
+   } 
+
+.option-title:not(:hover){
+    transition: 0.5s;
+    top: 75px; 
+}
+
   .home-open {
     position: relative;
     background-color: $color-main;
@@ -50,15 +68,115 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+    margin-top: 118px;
+    width: 590px;
   }
 
   .carousel-cell {
+    width: 100%;
+    margin-top: 0px;
     height: $base-size * 16;
-    border-radius: 5px;
   }
-  
+
   .box {
+    margin-bottom: 200px;
     display: flex;
     justify-content: space-around;
     border-radius: 5px;
   }
+
+  .box img {
+    flex: 0 0 33%;
+    height: $base-size * 28;
+    width: $base-size * 28;
+    object-fit: cover;
+    border-radius: 5px;
+    margin-bottom: 50px;
+    margin-left: 6px;
+  }
+
+  .title-box {
+    font-family: $font-header;
+    font-size: bold;
+  }
+
+  .box-description {
+    font-family: $font-text;
+    margin-left: 20px;
+  }
+
+  // GALLERY
+
+  .gallery {
+    margin-top: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+
+  .image-contrainer {
+    flex: 0 0 33,333%;
+    margin: 5px;
+    position: relative;
+  }
+
+  .gallery-img {
+    width: 180px;
+    height: 180px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+.gal-icons {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  background-color: rgba(142, 132, 4, 0.6);
+  opacity: 0;
+}
+
+.gal-icons ul {
+  margin: 0;
+  padding: 82px 0 0;
+}
+
+.gal-icons li {
+  list-style-type: none;
+  display: inline;
+  color: $color-light;
+  font-size: 0;
+}
+
+.image-contrainer:hover .gal-icons {
+  opacity: 1;
+}
+
+.image-contrainer:hover .gal-icons li {
+  font-size: 15px;
+  color: $color-main;
+  cursor: pointer;
+  transition: 1s;
+}
+
+
+.footer {
+  margin-top: 20px;
+  a {
+  color: $color-main;
+  text-decoration: none;
+  }
+}
+  
+
